--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proejto NLW#6</title>
+    <title>Projeto NLW-Heat</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
       <div class="container">
         <div class="avatar">
           <scan>
-            <img src="images/build.svg" alt="Selo rocketseat" />
+            <img class="rotate" src="images/build.svg" alt="Selo rocketseat" />
           </scan>
           <img id="userImage" src="images/foto2.png" alt="Imagem pessoal" />
         </div>
@@ -34,7 +34,11 @@
         <p id="userBio">testBio</p>
         <ul id="socialLinks">
           <li class="instagram">
-            <a href="https://www.instagram.com/brenobmac/" target="_blank">
+            <a
+              class="bounceButton"
+              href="https://www.instagram.com/brenobmac/"
+              target="_blank"
+            >
               <img src="images/Instagram.svg" alt="Ícone Instagram" />
             </a>
           </li>
